Terminamos componente proxy